[tool.poetry]
name = "beam-dramatiq-runner"
version = "0.1.0"
description = "A simple Python implementation of the Apache Beam Runner API on top of Dramatiq"
authors = ["Hannes Moser <box@hannesmoser.at>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
apache-beam = { extras = [], version = "^2.59.0" }
pytest = "^8.3.3"
redis = { extras = ["hiredis"], version = "5.1.1" }
hiredis = "^3.0.0"
dramatiq = { extras = ["gcp", "redis", "watch"], version = "^1.17.0" }
structlog = "^24.4.0"
dill = { extras = [], version = "0.3.1.1" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.poetry.scripts]
up = "scripts.up:main"
down = "scripts.down:main"
dev = "scripts.dev:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
target-version = "py312"
extend-exclude = ["*/migrations/*.py"]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
